# aRx

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  .gitmodules  .mypy  .travis.yml  COPYRIGHT  COPYRIGHT.md  LICENSE  LICENSE.md  LICENSE.original.md  MANIFEST.in  Pipfile  README.md  aRx.abstract.base.html  aRx.abstract.disposable.html  aRx.abstract.html  aRx.abstract.loopable.html  aRx.abstract.observable.html  aRx.abstract.observer.html  aRx.abstract.promise.html  aRx.disposable.anonymous_disposable.html  aRx.disposable.composite_disposable.html  aRx.disposable.html  aRx.error.html  aRx.expires.html  aRx.html  aRx.observable.empty.html  aRx.observable.from_async_iterable.html  aRx.observable.from_iterable.html  aRx.observable.html  aRx.observable.never.html  aRx.observable.unit.html  aRx.observer.anonymous_observer.html  aRx.observer.consumer.html  aRx.observer.html  aRx.observer.iterator_observer.html  aRx.operator.assertion.html  aRx.operator.concat.html  (+23 more)
.doctrees/: aRx.abstract.base.doctree  aRx.abstract.disposable.doctree  aRx.abstract.doctree  aRx.abstract.loopable.doctree  aRx.abstract.observable.doctree  aRx.abstract.observer.doctree  aRx.abstract.promise.doctree  aRx.disposable.anonymous_disposable.doctree  aRx.disposable.composite_disposable.doctree  aRx.disposable.doctree  aRx.doctree  aRx.error.doctree  aRx.expires.doctree  aRx.observable.doctree  aRx.observable.empty.doctree  aRx.observable.from_async_iterable.doctree  aRx.observable.from_iterable.doctree  aRx.observable.never.doctree  aRx.observable.unit.doctree  aRx.observer.anonymous_observer.doctree  aRx.observer.consumer.doctree  aRx.observer.doctree  aRx.observer.iterator_observer.doctree  aRx.operator.assertion.doctree  aRx.operator.concat.doctree  aRx.operator.doctree  aRx.operator.filter.doctree  aRx.operator.map.doctree  aRx.operator.max.doctree  aRx.operator.min.doctree  aRx.operator.skip.doctree  aRx.operator.stop.doctree  aRx.operator.take.doctree  aRx.promise.doctree  aRx.stream.doctree  aRx.stream.multi_stream.doctree  aRx.stream.single_stream.doctree  environment.pickle  index.doctree
.github/workflows/: test.yml
_modules/: index.html
_modules/aRx/: error.html  expires.html  promise.html
_sources/: aRx.abstract.rst.txt  aRx.observable.from_async_iterable.rst.txt  aRx.observable.never.rst.txt  aRx.observer.consumer.rst.txt  aRx.observer.iterator_observer.rst.txt  aRx.operator.concat.rst.txt  aRx.operator.filter.rst.txt  aRx.operator.min.rst.txt  aRx.operator.rst.txt  aRx.promise.rst.txt  aRx.rst.txt
_static/: documentation_options.js
aRx/: __init__.py  __version__.py  error.py  errors.py  expires.py  namespace.py  promise.py  subscription.py
aRx/abstract/: __init__.py  disposable.py  loggable.py  loopable.py  observable.py  observer.py  promise.py
aRx/disposable/: __init__.py  anonymous_disposable.py  composite_disposable.py
aRx/misc/: async_exit_stack.py  current_task.py  flag.py  noop.py
aRx/observable/: __init__.py  empty.py  from_async_iterable.py  from_iterable.py  never.py  observable_from_async_iterable.py  observable_from_iterable.py  unit.py
aRx/observables/: __init__.py  empty.py  from_async_iterable.py  from_iterable.py  never.py  observable.py  unit.py
aRx/observer/: __init__.py  anonymous_observer.py  consumer.py  iterator_observer.py
aRx/observers/: __init__.py  anonymous_observer.py  consumer.py  iterator_observer.py  observer.py
aRx/operations/: __init__.py  concat_op.py  observe_op.py  pipe_op.py  sink_op.py
aRx/operator/: __init__.py  assertion.py  concat.py  filter.py  map.py  max.py  min.py  skip.py  stop.py  take.py
aRx/operators/: __init__.py  assertion.py  filter.py  map.py  max.py  min.py  skip.py  stop.py  take.py
aRx/protocols/: __init__.py  observable_protocol.py  observer_protocol.py  transformer_protocol.py
aRx/stream/: __init__.py  multi_stream.py  single_stream.py
aRx/streams/: __init__.py  multi_stream.py  single_stream.py
aioreactive/: subscription.py  supervision.py
aioreactive/abstract/: __init__.py  disposable.py  loggable.py  observable.py  observer.py
aioreactive/core/: __init__.py  bases.py  disposables.py  errors.py  observables.py  observers.py  streams.py  subscription.py  utils.py
aioreactive/disposable/: AnonymousDisposable.py  CompositeDisposable.py  __init__.py  anonymous_disposable.py  composite_disposable.py
aioreactive/iterable/: to_async_observable.py
aioreactive/misc/: __init__.py  coro_done_callback.py  noop.py
aioreactive/observable/: __init__.py  base.py
aioreactive/observables/: base.py
aioreactive/observer/: __init__.py  anonymous_observer.py  base.py  iterator_observer.py
aioreactive/operator/: __init__.py  filter.py  switch_latest.py  take.py
areact/: error.py
docs/: Makefile  aRx.abstract.base.rst  aRx.abstract.disposable.rst  aRx.abstract.loopable.rst  aRx.abstract.observable.rst  aRx.abstract.observer.rst  aRx.abstract.promise.rst  aRx.abstract.rst  aRx.disposable.anonymous_disposable.rst  aRx.disposable.composite_disposable.rst  aRx.disposable.rst  aRx.error.rst  aRx.expires.rst  aRx.observable.empty.rst  aRx.observable.from_iterable.rst  aRx.observable.rst  aRx.observable.unit.rst  aRx.observer.anonymous_observer.rst  aRx.observer.rst  aRx.operator.assertion.rst  aRx.operator.map.rst  aRx.operator.max.rst  aRx.operator.rst  aRx.operator.skip.rst  aRx.operator.stop.rst  aRx.operator.take.rst  aRx.rst  aRx.stream.multi_stream.rst  aRx.stream.rst  aRx.stream.single_stream.rst  aRx.subscription.rst  conf.py  index.rst  make.bat
playground/: main.py
test/: README.md  test_async_iteration.py  test_chain.py  test_concat.py  test_debounce.py  test_delay.py  test_distinct_until_changed.py  test_filter.py  test_flat_map.py  test_forward_pipe.py  test_from_iterable.py  test_map.py  test_merge.py  test_pipe.py  test_single_stream.py  test_stream.py  test_take.py  test_unit.py  test_with_latest_from.py
tests/: README.md  expires.py  test_import.py  test_multistream.py  test_operators.py  test_promise_stream.py
tools/: README.md  format.sh  format_watcher.xml  read_config.py
(+222 files in other folders)
